Changed package manifest name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ch.dnastudios.UnityLib-core",
+  "name": "ch.dnastudios.unitylibcore",
   "version": "0.1.0",
   "displayName": "DNA Studios UnityLib-core",
   "description": "A collection of extensions and utilities for daily Unity Engine coding!",
