--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ch.dnastudios.unitylibcore",
   "version": "0.1.0",
-  "displayName": "DNA Studios UnityLib-core",
+  "displayName": "UnityLib-core",
   "description": "A collection of extensions and utilities for daily Unity Engine coding!",
   "unity": "2019.1",
   "licensesUrl": "https://github.com/DavidDNA/UnityLib-core/blob/main/LICENSE",
